<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.coeus.coeus_writetobyte.fragments.ScannerFragment">

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:text="@string/emailMainPage" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_frame_background_bordered"
        android:hint="@string/your_scanned_doc"
        android:paddingBottom="@dimen/text_view_top_bottom_padding"
        android:paddingEnd="@dimen/text_view_left_right_padding"
        android:paddingStart="@dimen/text_view_left_right_padding"
        android:paddingTop="@dimen/text_view_top_bottom_padding" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="@dimen/frame_width"
        android:layout_height="@dimen/frame_height"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/rounded_frame_background_bordered"
        android:padding="@dimen/frame_padding">

        <ImageView
            android:id="@+id/show_picture_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitCenter" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/font_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Spinner
            android:id="@+id/spinner_font"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            android:background="@drawable/spinner_background"
            android:layout_marginBottom="@dimen/spinner_bottom_margin"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Spinner
            android:id="@+id/spinner_text_size"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="@dimen/spinner_height"
            android:background="@drawable/spinner_background"
            android:layout_marginBottom="@dimen/spinner_bottom_margin"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_button_background"
        android:paddingStart="@dimen/button_padding"
        android:paddingEnd="@dimen/button_padding"
        android:text="@string/done"
        android:textColor="@android:color/white" />

</LinearLayout>
